# weathflow

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: advice.py  deps.py  months.py  transactions.py  upload.py
backend/app/config/: __init__.py  logging.py  settings.py
backend/app/db/: __init__.py  database.py  enums.py  models.py
backend/app/db/models/: __init__.py  advice.py  base.py  month.py  transaction.py
backend/app/domain/: categories.py
backend/app/repositories/: advice.py  advice_repository.py  month.py  transaction.py
backend/app/responses/: _types.py  advice.py  cashflow.py  history.py  months.py  transactions.py  upload.py
backend/app/routers/: advice.py  months.py  transactions.py  upload.py
backend/app/schemas/: months.py  upload.py
backend/app/services/: advice.py  advisor.py  calculator.py  categorization_cache.py  categorization_prompt.py  categorizer.py  csv_parser.py  exceptions.py  export.py  months.py  schemas.py  transactions.py  upload.py
backend/app/services/advice/: __init__.py  eligibility.py  generator.py  models.py  prompt.py  service.py
backend/app/services/calculation/: __init__.py  models.py  service.py
backend/app/services/categorization/: __init__.py  cache.py  mapping.py  models.py  prompt.py  service.py
backend/app/services/data/: __init__.py  cashflow.py  export.py  months.py  transactions.py
backend/app/services/dto/: __init__.py  advice.py  calculation.py  categorization.py  parsing.py
backend/app/services/prompts/: advice_prompt.py
backend/app/services/schemas/: __init__.py  (+4 more)
backend/tests/: __init__.py  conftest.py  test_advice.py  test_database.py  test_enums.py  test_month.py  test_relationships.py  test_transaction.py
backend/tests/integration/: conftest.py  test_advice_api.py  test_advice_eligibility.py  test_cashflow_api.py  test_export_api.py  test_history_api.py  test_months_api.py  test_transactions_api.py  test_upload_flow.py
backend/tests/units/: __init__.py
(+291 files in other folders)
